--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ main{
     font-size: 4em;
     padding-top: 0.4em;
     padding-bottom: 0.4em;
-    margin-top: 1em;
+    margin-top: 0.5em;
     text-align: center;
     text-transform: uppercase;
     background-color: white;
@@ -50,7 +50,7 @@ main article a:hover{
 } 
 
 main article img{
-    width: 80%;
+    width: 300px;
     height: 300px;
     margin: 1em auto;
     object-fit: fill;
@@ -75,6 +75,7 @@ main article img:hover{
     height: 90px;
     margin: 2em;
     object-fit:fill;
+    padding-left: 2em;
    
  }
 
